<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/group1" >
        <item
            android:id="@+id/actionBtnCopy"
            android:title="@string/buttonCopy"
            android:showAsAction="ifRoom">
        </item>
        <item
            android:id="@+id/actionBtnGo"
            android:title="@string/buttonGo"
            android:showAsAction="ifRoom">
        </item>
        <item
            android:id="@+id/actionBtnProfiles"
            android:title="@string/buttonProfiles"
            android:showAsAction="collapseActionView">
        </item>
        <item
            android:id="@+id/actionBtnAbout"
            android:title="@string/buttonAbout"
            android:showAsAction="collapseActionView">
            <menu>
                <item android:id="@+id/item1" android:title="License"/>
                <item android:id="@+id/item2" android:title="Developer"/>
            </menu>
        </item>
    </group>

</menu>
