<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/widget33"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/widget11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textSize="18sp" >
            </TextView>

            <EditText
                android:id="@+id/editDomain"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:text="@string/http"
                android:textSize="18sp" >
            </EditText>

            <TextView
                android:id="@+id/widget12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mpw"
                android:textSize="18sp" >
            </TextView>

            <EditText
                android:id="@+id/editPW"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text=""
                android:textSize="18sp" >
            </EditText>

            <TextView
                android:id="@+id/textPW"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text=""
                android:textSize="18sp" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/modProfile" />

            <LinearLayout
                android:id="@+id/widget34"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnUpdate"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update" />

                <Button
                    android:id="@+id/btnCopy"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/copy" />

                <Button
                    android:id="@+id/btnGo"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/go" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/emptyFieldsCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/emptyFields" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>